fix(tests): update WebhookHttpClientTest to use getAllServeEvents for accurate event retrieval